--- a/tableReservation.html
+++ b/tableReservation.html
@@ -11,8 +11,8 @@
 <nav>
     <ul>
         <li><a href="homepage.html">Homepage</a></li>
-        <li><a href="tableReservation">Table Reservation</a></li>
-        <li><a class="activePage" href="guestListLogin.html">Guest List Login</a></li>
+        <li><a class="activePage" href="tableReservation">Table Reservation</a></li>
+        <li><a href="guestListLogin.html">Guest List Login</a></li>
     </ul>
     </nav>
 
