--- a/homepage.html
+++ b/homepage.html
@@ -5,9 +5,15 @@
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
-<body>
-<nav>
 
+<body>
+
+<nav>
+<ul>
+    <li><a class="activePage" href="homepage.html">Homepage</a></li>
+    <li><a href="tableReservation">Table Reservation</a></li>
+    <li><a href="guestListLogin.html">Guest List Login</a></li>
+</ul>
 </nav>
 
 
