Form, CSS of Pages

--- a/guestListLogin.html
+++ b/guestListLogin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Restaurant</title>
+    <title>Zeynep's Restaurant</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
@@ -11,15 +11,24 @@
 <nav>
     <ul>
         <li><a href="homepage.html">Homepage</a></li>
-        <li><a href="tableReservation">Table Reservation</a></li>
+        <li><a href="tableReservation.html">Table Reservation</a></li>
         <li><a class="activePage" href="guestListLogin.html">Guest List Login</a></li>
     </ul>
     </nav>
 
+<h1>Guest List Login</h1>
 
 </body>
 
 <footer>
-
-</footer>
+    <div class="leftDiv">
+        <p><b>Phone Number:</b>
+        <br> 0123456789</p>
+    </div>
+    
+    <div class="rightDiv">
+        <p><b>Email Address:</b>
+        <br>ZeynepsRestaurant@gmail.com</p>
+    </div>
+    </footer>
 </html>
