--- a/homepage.html
+++ b/homepage.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Restaurant</title>
+    <title>Zeynep's Restaurant</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
 </head>
 
 <body>
 
-<nav>
-<ul>
-    <li><a class="activePage" href="homepage.html">Homepage</a></li>
-    <li><a href="tableReservation">Table Reservation</a></li>
-    <li><a href="guestListLogin.html">Guest List Login</a></li>
-</ul>
-</nav>
+    <nav>
+    <ul>
+        <li><a class="activePage" href="homepage.html">Homepage</a></li>
+        <li><a href="tableReservation.html">Table Reservation</a></li>
+        <li><a href="guestListLogin.html">Guest List Login</a></li>
+    </ul>
+    </nav>
 
+    <h1>Homepage</h1>
+
+    <img src="restaurantPhoto.jpg">
 
 </body>
 
 <footer>
+    <div class="leftDiv">
+        <p><b>Phone Number:</b>
+        <br> 0123456789</p>
+    </div>
 
+    <div class="rightDiv">
+        <p><b>Email Address:</b>
+        <br>ZeynepsRestaurant@gmail.com</p>
+    </div>
 </footer>
 </html>
