Guest List Login Form

--- a/guestListLogin.html
+++ b/guestListLogin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <title>Zeynep's Restaurant</title>
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
@@ -17,6 +18,23 @@
     </nav>
 
 <h1>Guest List Login</h1>
+
+<form>
+    <label for="username">Username*:</label>
+    <input type="text" id="username" name="username" maxlength="30" required>
+
+    <br><br>
+
+    <label for="password">Password*:</label>
+    <input type="text" id="password" name="password" maxlength="30" required>
+
+    <br><br>
+
+    <input type="submit" value="Login">
+
+    <br><br>
+
+</form>
 
 </body>
 
