--- a/homepage.html
+++ b/homepage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Zeynep's Restaurant</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <h1>Homepage</h1>
 
-    <img src="restaurantPhoto.jpg">
+    <img src="images/restaurantPhoto.jpg">
 
 </body>
 
