--- a/guestListLogin.html
+++ b/guestListLogin.html
@@ -3,8 +3,8 @@
 <head>
 
     <title>Zeynep's Restaurant</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
 </head>
 
 <body>
