--- a/tableReservation.html
+++ b/tableReservation.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Zeynep's Restaurant</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/app.js"></script>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <h1>Table Reservation - form</h1>
 
-    <form>
+    <form action="php/reservationHandling.php" method="POST">
         <label for="firstName">First Name*:</label>
         <input type="text" id="firstName" name="firstName" maxlength="30" required>
         
