--- a/guestListLogin.html
+++ b/guestListLogin.html
@@ -19,14 +19,14 @@
 
 <h1>Guest List Login</h1>
 
-<form>
+<form action="php/login.php" method="POST">
     <label for="username">Username*:</label>
-    <input type="text" id="username" name="username" maxlength="30" required>
+    <input type="text" id="username" name="staffUsername" maxlength="30" required>
 
     <br><br>
 
     <label for="password">Password*:</label>
-    <input type="text" id="password" name="password" maxlength="30" required>
+    <input type="text" id="password" name="staffPassword" maxlength="30" required>
 
     <br><br>
 
