php files updated

--- a/tableReservation.html
+++ b/tableReservation.html
@@ -18,8 +18,8 @@
 
     <h1>Table Reservation - form</h1>
 
-    <form action="php/reservationHandler.php" method="POST">
-        <input type="hidden" name="action" value="handleReservation">
+    <form id="reservationForm" action="php/reservationHandler.php" method="POST">
+        <input type="hidden" name="action" value="checkAvailability">
 
         <label for="firstName">First Name*:</label>
         <input type="text" id="firstName" name="firstName" maxlength="30" required>
@@ -46,11 +46,26 @@
 
         <br><br>
 
-        <input type="submit" value="Find Table">
+        <button type="button" id="checkAvailabilityBtn">Check Availability</button>
+        <button type="submit" id="confirmReservationBtn">Confirm Reservation</button>
 
         <br><br>
 
     </form>
+
+
+    <script>
+        document.getElementById("checkAvailabilityBtn").addEventListener("click", function () {
+            document.getElementById("action").value = "checkAvailability";
+            document.getElementById("reservationForm").submit();
+        });
+
+        document.getElementById("confirmReservationBtn").addEventListener("click", function () {
+            document.getElementById("action").value = "handleReservation";
+            document.getElementById("reservationForm").submit();
+        });
+
+    </script>
 
 
 </body>
