testing and further improvements

--- a/tableReservation.html
+++ b/tableReservation.html
@@ -46,8 +46,8 @@
 
         <br><br>
 
-        <button type="button" id="checkAvailabilityBtn">Check Availability</button>
-        <button type="submit" id="confirmReservationBtn">Confirm Reservation</button>
+        <input type="submit" value="Check Availability">
+        <input type="submit" value="Confirm Reservation">
 
         <br><br>
 
@@ -67,18 +67,18 @@
 
     </script>
 
+    <footer>
+        <div class="leftDiv">
+            <p><b>Phone Number:</b>
+            <br> 0123456789</p>
+        </div>
+
+        <div class="rightDiv">
+            <p><b>Email Address:</b>
+            <br>ZeynepsRestaurant@gmail.com</p>
+        </div>
+    </footer>
+
 
 </body>
-
-<footer>
-    <div class="leftDiv">
-        <p><b>Phone Number:</b>
-        <br> 0123456789</p>
-    </div>
-    
-    <div class="rightDiv">
-        <p><b>Email Address:</b>
-        <br>ZeynepsRestaurant@gmail.com</p>
-    </div>
-    </footer>
 </html>
