more php files and updates

--- a/tableReservation.html
+++ b/tableReservation.html
@@ -14,11 +14,11 @@
             <li><a class="activePage" href="tableReservation.html">Table Reservation</a></li>
             <li><a href="guestListLogin.html">Guest List Login</a></li>
         </ul>
-        </nav>
+    </nav>
 
     <h1>Table Reservation - form</h1>
 
-    <form id="reservationForm" action="php/reservationHandler.php" method="POST">
+    <form action="php/reservationHandler.php" method="POST">
         <input type="hidden" name="action" value="checkAvailability">
 
         <label for="firstName">First Name*:</label>
@@ -47,10 +47,7 @@
         <br><br>
 
         <input type="submit" value="Check Availability">
-        <input type="submit" value="Confirm Reservation">
-
         <br><br>
-
     </form>
 
 
