time slot error solved and more session variables implemented

--- a/guestListLogin.html
+++ b/guestListLogin.html
@@ -12,12 +12,12 @@
     <nav>
         <ul>
             <li><a href="homepage.html">Homepage</a></li>
-            <li><a href="tableReservation.html">Table Reservation</a></li>
+            <li><a href="php/tableReservation.php">Table Reservation</a></li>
             <li><a class="activePage" href="guestListLogin.html">Guest List Login</a></li>
         </ul>
     </nav>
 
-    <h1>Guest List Login</h1>
+    <h1>Guest List Login - Login Page</h1>
 
     <form action="php/login.php" method="POST">
         <label for="username">Username*:</label>
