--- a/homepage.html
+++ b/homepage.html
@@ -11,7 +11,7 @@
     <nav>
     <ul>
         <li><a class="activePage" href="homepage.html">Homepage</a></li>
-        <li><a href="tableReservation.html">Table Reservation</a></li>
+        <li><a href="php/tableReservation.php">Table Reservation</a></li>
         <li><a href="guestListLogin.html">Guest List Login</a></li>
     </ul>
     </nav>
