starting guest list login pages (there are errors to fix)

--- a/guestListLogin.html
+++ b/guestListLogin.html
@@ -26,25 +26,21 @@
         <br><br>
 
         <label for="password">Password*:</label>
-        <input type="text" id="password" name="staffPassword" maxlength="30" required>
+        <input type="password" id="password" name="staffPassword" maxlength="30" required>
 
         <br><br>
 
         <input type="submit" value="Login">
-
-        <br><br>
-
+    <br>
     </form>
 
     <footer>
         <div class="leftDiv">
-            <p><b>Phone Number:</b>
-            <br> 0123456789</p>
+            <p><b>Phone Number:</b><br>0123456789</p>
         </div>
-    
+
         <div class="rightDiv">
-            <p><b>Email Address:</b>
-            <br>ZeynepsRestaurant@gmail.com</p>
+            <p><b>Email Address:</b><br>ZeynepsRestaurant@gmail.com</p>
         </div>
     </footer>
 
