timout logout implemented, reorganised files, mark as arrived implemented.

--- a/html/errorPages/noTimeSlotsAvailable.html
+++ b/html/errorPages/noTimeSlotsAvailable.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../../homepage.html">Homepage</a></li>
-            <li><a href="../tableReservation.php">Table Reservation</a></li>
-            <li><a href="../../guestListLogin.html">Guest List Login</a></li>
+            <li><a href="../homepage.html">Homepage</a></li>
+            <li><a href="../../php/tableReservation.php">Table Reservation</a></li>
+            <li><a href="../guestListLogin.html">Guest List Login</a></li>
         </ul>
     </nav>
 
@@ -21,7 +21,7 @@
     <br>
     Please try a different date or contact us for assistance using the details at the end of the page.</p>
 
-    <a href="../tableReservation.php">Go back to the form.</a>
+    <a href="../../php/tableReservation.php">Go back to the form.</a>
     <br><br>
 
     <footer>
