--- a/html/guestListLogin.html
+++ b/html/guestListLogin.html
@@ -3,8 +3,8 @@
 <head>
 
     <title>Zeynep's Restaurant</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/app.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/app.js"></script>
 </head>
 
 <body>
@@ -12,14 +12,14 @@
     <nav>
         <ul>
             <li><a href="homepage.html">Homepage</a></li>
-            <li><a href="php/tableReservation.php">Table Reservation</a></li>
+            <li><a href="../php/tableReservation.php">Table Reservation</a></li>
             <li><a class="activePage" href="guestListLogin.html">Guest List Login</a></li>
         </ul>
     </nav>
 
     <h1>Guest List Login - Login Page</h1>
 
-    <form action="php/login.php" method="POST">
+    <form action="../php/login.php" method="POST">
         <label for="username">Username*:</label>
         <input type="text" id="username" name="staffUsername" maxlength="30" required>
 
