--- a/html/homepage.html
+++ b/html/homepage.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Zeynep's Restaurant</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/app.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/app.js"></script>
 </head>
 
 <body>
@@ -11,14 +11,14 @@
     <nav>
     <ul>
         <li><a class="activePage" href="homepage.html">Homepage</a></li>
-        <li><a href="php/tableReservation.php">Table Reservation</a></li>
+        <li><a href="../php/tableReservation.php">Table Reservation</a></li>
         <li><a href="guestListLogin.html">Guest List Login</a></li>
     </ul>
     </nav>
 
     <h1>Homepage</h1>
 
-    <img src="images/restaurantPhoto.jpg">
+    <img src="../images/restaurantPhoto.jpg">
 
 
     <footer>
