--- a/html/homepage.html
+++ b/html/homepage.html
@@ -20,6 +20,7 @@
 
     <img src="../images/restaurantPhoto.jpg">
 
+    <p>Welcome to Zeynep's Restaurant.<br>This website allows you to book reservations easily. Simply enter your details, select preferred date and time, and secure your table.<br>Thank you for choosing us.</p>
 
     <footer>
         <div class="leftDiv">
