added comments to all files

--- a/html/guestListLogin.html
+++ b/html/guestListLogin.html
@@ -7,8 +7,10 @@
     <script src="../js/app.js"></script>
 </head>
 
-<body>
 
+
+<body>
+    <!-- Navigation bar -->
     <nav>
         <ul>
             <li><a href="homepage.html">Homepage</a></li>
@@ -17,8 +19,11 @@
         </ul>
     </nav>
 
+
+
     <h1>Guest List Login - Login Page</h1>
 
+    <!-- Form for the Host/Hostess login -->
     <form action="../php/login.php" method="POST">
         <label for="username">Username*:</label>
         <input type="text" id="username" name="staffUsername" maxlength="30" required>
@@ -34,6 +39,8 @@
     <br><br>
     </form>
 
+
+
     <footer>
         <div class="leftDiv">
             <p><b>Phone Number:</b><br>0123456789</p>
@@ -43,7 +50,6 @@
             <p><b>Email Address:</b><br>ZeynepsRestaurant@gmail.com</p>
         </div>
     </footer>
-
 
 </body>
 </html>
