--- a/html/homepage.html
+++ b/html/homepage.html
@@ -6,8 +6,10 @@
     <script src="../js/app.js"></script>
 </head>
 
-<body>
 
+
+<body>
+    <!-- Navigation bar -->
     <nav>
     <ul>
         <li><a class="activePage" href="homepage.html">Homepage</a></li>
@@ -16,12 +18,18 @@
     </ul>
     </nav>
 
+
+
     <h1>Homepage</h1>
 
+    <!-- Display image and text about the restaurant -->
     <img src="../images/restaurantPhoto.jpg">
 
     <p>Welcome to Zeynep's Restaurant.<br>This website allows you to book reservations easily. Simply enter your details, select preferred date and time, and secure your table.<br>Thank you for choosing us.</p>
 
+
+    
+    <!-- Footer -->
     <footer>
         <div class="leftDiv">
             <p><b>Phone Number:</b>
