--- a/html/errorPages/noTimeSlotsAvailable.html
+++ b/html/errorPages/noTimeSlotsAvailable.html
@@ -6,6 +6,8 @@
         <script src="../../js/app.js"></script>
     </head>
 
+
+    
 <body>
     <nav>
         <ul>
@@ -15,6 +17,9 @@
         </ul>
     </nav>
 
+
+
+    <!-- Inform the user about the error and hyperlink back to the reservation form. -->
     <h1>Table Reservation - Unavailability</h1>
 
     <p>Sorry, but there are no available time slots for the selected date.
@@ -23,6 +28,8 @@
 
     <a href="../../php/tableReservation.php">Go back to the form.</a>
     <br><br>
+
+
 
     <footer>
         <div class="leftDiv">
