--- a/html/errorPages/sessionExpired.html
+++ b/html/errorPages/sessionExpired.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Session Expired</title>
     <link rel="stylesheet" href="../../css/style.css">
     <script src="../../js/app.js"></script>
 </head>
+
+
 
 <body>
     <nav>
@@ -14,8 +17,13 @@
         </ul>
     </nav>
 
+
+
+    <!-- Inform the user about the error and hyperlink back to the login page. -->
     <h1>Session Expired</h1>
     <p>Your one hour login session has expired. Please <a href="../guestListLogin.html">log in again</a>.</p>
+
+
 
     <footer>
         <div class="leftDiv">
@@ -28,5 +36,6 @@
             <br>ZeynepsRestaurant@gmail.com</p>
         </div>
     </footer>
+
 </body>
 </html>
