ameding for screenshot

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -25,7 +25,8 @@
     <!-- Display image and text about the restaurant -->
     <img src="../images/restaurantPhoto.jpg">
 
-    <p>Welcome to Zeynep's Restaurant.<br>This website allows you to book reservations easily. Simply enter your details, select preferred date and time, and secure your table.<br>Thank you for choosing us.</p>
+    <p>Welcome to Zeynep's Restaurant.<br>This website allows you to book reservations easily. 
+    Simply enter your details, select preferred date and time, and secure your table.<br>Thank you for choosing us.</p>
 
 
     
